compiler/tests/ar/errors/pure_fnval_ar.salam
// لغة: العربية
// EXPECT: E012
نقي دالة طبق(f دالة (صحيح٣٢) صحيح٣٢, x صحيح٣٢) صحيح٣٢:
    أرجع f(x)
نهاية

دالة الرئيسية:
    g تلقائي = (v صحيح٣٢) => v + 1
    اطبع(طبق(g, 4))
نهاية
